--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Balthazar|Crimson+Text|Lusitana|Montserrat|Open+Sans|Oswald|Raleway|Roboto');
 body{
     background-color: darkgray;
-    color:red;}
+    color:white;
+  }
 
 
 /*----------------------------------------------------------------------------//
